[package]
name = "jute"
version = "0.1.0"
edition = "2021"
authors = ["Naman Bishnoi <nmn@n3n.org>"]
description = "An opinionated JSON Object Signing and Encryption (JOSE) library that includes implementations of JSON Web Tokens (JWT), JSON Web Signature (JWS), JSON Web Encryption (JWE) along with dependencies like JSON Web Algorithm (JWA) and JSON Web Keys (JWK)."
license = "MIT OR Apache-2.0"
homepage = "https://n3n.org/"
repository = "https://github.com/n3nx/jute"
documentation = "https://docs.rs/jute"
keywords = ["jwt", "json", "jose", "jwe", "jws"]
categories = ["authentication", "web-programming", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jute"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[dependencies]
chrono = { version = "0.4.20", default-features = false, features = ["clock"] }
data-encoding = "2.3.2"
once_cell = "1.16.0"
num-bigint = "0.4"
num-traits = "0.2"
ring = "~0.16.20"
serde = { version = "1.0.171, <1.0.172", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[dev-dependencies]
serde_test = "1.0"

[features]
# Treat warnings as a build error.
strict = []
