[package]
name = "jute"
version = "0.1.1"
edition = "2021"
authors = ["Naman Bishnoi <nmn@n3n.org>"]
description = "An opinionated JOSE library that implements JWT, JWS, JWE, JWA and JWK."
license = "MIT OR Apache-2.0"
homepage = "https://n3n.org/"
repository = "https://github.com/n3nx/jute"
documentation = "https://docs.rs/jute"
keywords = ["jwt", "json", "jose", "jwe", "jws"]
categories = ["authentication", "web-programming", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jute"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[dependencies]
once_cell = "1.16.0"
num-bigint = "0.4"
num-traits = "0.2"
ring = "~0.16.20"
serde = { version = "1.0.184", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
base64ct = { version = "1.6.0", features = ["std"] }
hex = { version = "0.4.3", features = ["alloc"] }
time = { version = "0.3.28", features = ["std"], default-features = false }

[dev-dependencies]
serde_test = "1.0"

[features]
# Treat warnings as a build error.
strict = []
